detail view overflow bug fix

--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -78,6 +78,17 @@ body{
 
 pre{
     font-family: 'GangwonEdu_OTFBoldA';
+    overflow: auto;
+    white-space: pre-wrap;
+    word-break: break-all;
+}
+.card-text{
+    text-align: left;
+    height:120%;
+    border-bottom: 1px solid rgba(0,0,0,.1);
+    background: #fff;
+    margin-bottom: 0;
+    white-space: pre-wrap;
 }
 
 .card{
@@ -88,8 +99,12 @@ pre{
     box-shadow: 0 2px 5px rgba(0,0,0,.25);
     border-collapse: collapse;
     border-radius: 5px;
-    overflow: hidden;
+    overflow: visible;
     z-index: 1000;
+    white-space: normal;
+}
+.card-body{
+    white-space: normal;
 }
 .card-title{
     text-align: center;
@@ -107,13 +122,7 @@ pre{
     background: #fff;
     line-height: 20px;
 }
-.card-text{
-    text-align: left;
-    height:300px;
-    border-bottom: 1px solid rgba(0,0,0,.1);
-    background: #fff;
-    margin-bottom: 0;
-}
+
 .card-file{
     text-align: left;
     border-bottom: 1px solid rgba(0,0,0,.1);
